--- a/pages/detail/detail.wxss
+++ b/pages/detail/detail.wxss
@@ -10,7 +10,7 @@ page {
   right: 0;
   left: 0;
   z-index: 99;
-  padding: 0 7px;
+  padding: 0 15px;
 }
 
 .nav-height {
@@ -29,6 +29,10 @@ page {
 
 .t-swiper-nav--bottom {
   bottom: 10% !important;
+}
+
+.t-image {
+  height: 100% !important;
 }
 
 .swiper {
@@ -100,8 +104,18 @@ page {
   gap: 10rpx;
 }
 
+.info-card {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  position: absolute;
+  top: 38vh;
+  left: 0;
+  right: 0;
+}
+
 .info-card-body {
-  margin: 50rpx 0;
+  margin-top: 50rpx;
 }
 
 .tag {
@@ -129,4 +143,9 @@ page {
   height: 45rpx;
   width: 45rpx;
   margin-right: 10rpx;
+}
+
+/* 对话框 */
+.confirmBtn {
+  color: #DD9A04 !important;
 }
