--- a/pages/login/login.wxml
+++ b/pages/login/login.wxml
@@ -27,11 +27,11 @@
       </view>
       <view class="password">
         <input value="{{userForm.password}}" bindinput="inputPassword" type="{{inputType}}" maxlength="21" placeholder="密码" style="height: 60rpx; width: 80%;" />
-        <t-icon class="browse" name="{{browseName}}" size="38rpx" color="#DD9A04" catchtap="passwordIconTap" />
+        <t-icon class="browse" name="{{browseName}}" size="38rpx" color="#DD9A04" bindtap="passwordIconTap" />
       </view>
       <view class="password-require" wx:if="{{!toLogin}}">
-        <input value="{{userForm.require}}" bindinput="inputPasswordRequire" type="{{inputConfirmType}}" maxlength="21" placeholder="再次确认密码" style="height: 60rpx;width: 80%;" />
-        <t-icon class="browse" name="{{browseConfirmName}}" size="38rpx" color="#DD9A04" catchtap="passwordConfirmIconTap" />
+        <input value="{{userForm.confirm}}" bindinput="inputPasswordRequire" type="{{inputConfirmType}}" maxlength="21" placeholder="再次确认密码" style="height: 60rpx;width: 80%;" />
+        <t-icon class="browse" name="{{browseConfirmName}}" size="38rpx" color="#DD9A04" bindtap="passwordConfirmIconTap" />
       </view>
       <view class="toRegister">
         <text bindtap="toRegister" wx:if="{{toLogin}}">没有账户？去注册</text>
