--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -78,7 +78,13 @@
         </view>
       </view>
 
-      <scroll-view scroll-top="{{scrollTop}}" scroll-y="true" class="list" style="height: calc(100vh - {{top}}px - {{height}}px - 60rpx - 25rpx - 25rpx - 20rpx - 27px - 20rpx);" bindscroll="onScroll">
+      <scroll-view 
+      scroll-top="{{scrollTop}}" 
+      scroll-y="true" 
+      class="list" 
+      style="height: calc(100vh - {{top}}px - {{height}}px - 60rpx - 25rpx - 25rpx - 20rpx - 27px - 20rpx); padding: 15rpx 0rpx" 
+      bindscroll="onScroll"
+      >
         <view class="list-item" wx:for="{{artifectList}}" wx:key="index" bindtap="toDetail" data-index="{{index}}">
           <view class="item-head" wx:if="{{isImg}}">
             <t-image t-class="t-img" src="{{item.image[0]}}" mode="aspectFill" width="100%" height="150"  />
